--- a/spring-boot/src/main/resources/public/css/project.css
+++ b/spring-boot/src/main/resources/public/css/project.css
@@ -1,72 +1,5 @@
-.main-projects {
-    margin: 30px 0 0 0;
-    text-align: center;
-}
-
-div.subject {
-    padding: 30px 0 30px 0;
-}
-
-label.subject {
-    font-size: 25px;
-}
-
-div.subject hr {
-    margin: auto;
-    width: 30px;
-    height: 5px;
-    border-width: 3px;
-    border-color: #000000;
-}
-
-label.subject-name {
-    display: inline-block;
-    margin: 10px 0 0 0;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-p.subject-desc {
-    margin: 6px 0 0 0;
-    font-size: 15px;
-    font-weight: bold;
-}
-
-ul.project-list {
-    list-style: none;
-    padding: 0;
-    width: 90%;
-    margin: 30px auto;
-}
-
-li.project {
-    background-color: #FFFFFF;
-    margin: 0 0 30px 0;
-}
-
-.project-img {
+.main-img {
     width: 100%;
-    height: 250px;
-    background-color: palevioletred;
-}
-
-.project .status {
-    float: right;
-    background-color: #fbef03;
-    padding: 10px 20px;
-    font-size: 20px;
-    font-weight: bold;
-}
-
-.project .project-summary {
-    height: 100px;
-}
-
-.project h5 {
-    font-size: 1.2em;
-    font-weight: bold;
-    margin: 20px;
-    text-align: left;
 }
 
 .category-list {
@@ -84,36 +17,178 @@ li.project {
     text-align: center;
 }
 
+.desc {
+    margin: 5%;
+}
+
+h2 {
+    font-size: 30px;
+    font-weight: bold;
+    display: inline-block;
+}
+
+.step {
+    float: right;
+    display: inline-block;
+    width: 50px;
+    padding: 5px;
+    font-size: 13px;
+    font-weight: bold;
+    text-align: center;
+    background-color: #fbef03;
+}
+
+.profile {
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    border-radius: 3em;
+    background-color: #5d9eee;
+}
+
+h5.writer {
+    display: inline-block;
+    vertical-align: top;
+    font-size: 15px;
+    margin: 10px 3px;
+}
+
 .percentage-zone {
-    width: 80%;
+    width: 95%;
     background-color: #DDDDDD;
     margin: 15px auto;
 }
 
 .percentage-zone .percentage {
-    height: 7px;
+    height: 5px;
     background-color: #18c3b3;
 }
 
 .count, .percentage-number {
-    width: 60px;
     display: inline-block;
     font-size: 15px;
     font-weight: bold;
     color: #18c3b3;
     margin: 0;
-    text-align: left;
-}
-
-.count {
-    float: left;
-    margin: 0 0 0 30px;
 }
 
 .percentage-number {
     float: right;
 }
 
-div.subject.best {
+.join-btn {
+    display: block;
+    margin: 20px auto;
+    font-size: 16px;
+    font-weight: bold;
     background-color: #fbef03;
+    padding: 7px 20px;
+    outline: none;
+    transition: 0.2s;
+    -webkit-transition: 0.2s;
 }
+
+.join-btn:hover {
+    cursor: pointer;
+}
+
+ul.share-list {
+    display: table;
+    padding: 0;
+    margin: auto;
+    list-style: none;
+}
+
+ul.share-list .share {
+    margin: 10px 5px;
+    width: 40px;
+    height: 40px;
+    background-color: #5d9eee;
+    border-radius: 2em;
+    display: inline-block;
+}
+
+div.assembly {
+    margin: 40px 0 0 0;
+}
+
+div.assembly label {
+    color: #666666;
+}
+
+ul#assembly-man-list {
+    list-style: none;
+    padding: 0;
+}
+
+ul#assembly-man-list li {
+    display: inline-block;
+    margin: 0 15px;
+}
+
+.assembly-man .profile-img {
+    margin: auto;
+    width: 50px;
+    height: 50px;
+    border-radius: 2em;
+    background-color: #18c3b3;
+}
+
+.assembly-man p {
+    margin: 5px 0;
+    font-size: 13px;
+    color: #444444;
+}
+
+ul#committee {
+    list-style: none;
+    padding: 0;
+}
+
+ul#committee li {
+    margin: 3px 5px;
+    padding: 4px 9px;
+    font-size: 12px;
+    display: inline-block;
+    background-color: #fd515d;
+    color: #FFFFFF;
+}
+
+nav.info-subject {
+    width: 100%;
+}
+
+nav.info-subject button {
+    width: 32%;
+    text-align: center;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+nav.info-subject button.active {
+    color: #18c3b3;
+}
+
+div.info-contents {
+    padding: 10%;
+}
+
+div.info-contents {
+    display: none;
+}
+
+div.info-contents.is-visible {
+    display: block;
+}
+
+@media screen and (min-width: 900px) {
+    .step {
+        margin: 30px 0 0 0;
+    }
+
+    ul.share-list {
+        float: right;
+        margin: -60px 0 0 0;
+    }
+}
+
