--- a/spring-boot/src/main/resources/public/css/layout.css
+++ b/spring-boot/src/main/resources/public/css/layout.css
@@ -2,6 +2,7 @@
     font-family: NotoSans;
     src: url("/font/NotoSans.otf") format("opentype");
 }
+
 html, body {
     max-width: 100%;
     overflow-x: hidden;
@@ -16,6 +17,7 @@ h1, h2, h3 {
 
 a {
     text-decoration: none;
+    color: #000000;
 }
 
 .header {
