--- a/spring-boot/src/main/resources/templates/login.hbs
+++ b/spring-boot/src/main/resources/templates/login.hbs
@@ -40,7 +40,7 @@
 
     <div class="others-zone">
         <a class="sign-up" href="/users/form">회원가입</a>
-        <a class="find-password" href="#">비밀번호 찾기</a>
+        <a class="find-password" href="/users/password">비밀번호 찾기</a>
     </div>
 
     {{> include/footer}}
