--- a/spring-boot/src/main/resources/templates/include/footer.hbs
+++ b/spring-boot/src/main/resources/templates/include/footer.hbs
@@ -6,9 +6,9 @@
     <div class="right-side">
         <p>info@toktok.io</p>
         <ul class="account-list">
-            <li class="facebook">F</li>
-            <li class="twitter">T</li>
-            <li class="kakao">K</li>
+            <li class="facebook"></li>
+            <li class="twitter"></li>
+            <li class="kakao"></li>
         </ul>
     </div>
 </footer>
