--- a/spring-boot/src/main/resources/public/css/projectList.css
+++ b/spring-boot/src/main/resources/public/css/projectList.css
@@ -57,15 +57,15 @@ p.subject-desc {
 ul.project-list {
     list-style: none;
     padding: 0;
-    width: 90%;
-    margin: 30px 0 0 17px;
+    margin: 30px auto;
+    text-align: center;
 }
 
 li.project {
     display: inline-block;
     width: 100%;
     background-color: #FFFFFF;
-    margin: 0 0 30px 0;
+    margin: 0 20px 30px 0;
     max-width: 380px;
     vertical-align: middle;
 }
