--- a/spring-boot/src/main/resources/templates/index.hbs
+++ b/spring-boot/src/main/resources/templates/index.hbs
@@ -14,7 +14,7 @@
                 <p>시민의 제안으로 법안을 만듭니다</p>
                 <h6>새로워진 국회톡톡에서<br>
                 직접 국회에 제안해보세요.</h6>
-                <a class="project-form">제안하기</a>
+                <a class="project-form" href="/projectForm">제안하기</a>
             </li>
             <li class="carousel-page page-2" data-item="2">
                 PAGE2
@@ -32,7 +32,9 @@
     <div class="main-projects">
         <div class="subject imminent">
             <hr>
-            <label class="subject-name" for="imminent">임박제안</label>
+            <a href="/projects?by=imminent">
+                <label class="subject-name" for="imminent">임박제안</label>
+            </a>
             <p class="subject-desc">마감일이 얼마 남지 않은 제안들을 확인해보세요.</p>
             <ul class="project-list imminent" id="imminent">
                 {{#each projects_imminent}}
@@ -55,7 +57,9 @@
 
         <div class="subject best">
             <hr>
-            <label class="subject-name" for="best">베스트 제안</label>
+            <a href="/projects?by=best">
+                <label class="subject-name" for="best">베스트 제안</label>
+            </a>
             <p class="subject-desc">가장 참여율이 높은 베스트 제안들을 확인해보세요.</p>
             <ul class="project-list best" id="best">
                 {{#each projects_best}}
@@ -78,7 +82,9 @@
 
         <div class="subject new">
             <hr>
-            <label class="subject-name" for="new">신규 제안</label>
+            <a href="/projects?by=new">
+                <label class="subject-name" for="new">신규 제안</label>
+            </a>
             <p class="subject-desc">새로운 제안들을 확인해보세요.</p>
             <ul class="project-list new" id="new">
                 {{#each projects_new}}
