--- a/spring-boot/src/main/resources/templates/projectList.hbs
+++ b/spring-boot/src/main/resources/templates/projectList.hbs
@@ -9,32 +9,25 @@
 <body>
 {{> include/header}}
 <main>
-    <h2>임박 제안</h2>
-    <div class="filler-zone">
-        <select class="category-list">
-            <option class="category" data-item="전체">분야별</option>
-            <option class="category" data-item="환경">환경</option>
-            <option class="category" data-item="인권">인권</option>
-            <option class="category" data-item="육아">육아</option>
-            <option class="category" data-item="언론">언론</option>
-        </select>
-    </div>
-    <ul class="project-list">
-        <a href="/projects/1">
-            <li class="project">
-                <div class="project-img">
-                    <div class="status">시민참여</div>
-                </div>
-                <div class="project-summary">
-                    <h5>임신중단 전면 합법화를 촉구합니다.</h5>
-                    <div class="percentage-zone"><div class="percentage"></div></div>
-                    <p class="count">1340명</p>
-                    <p class="percentage-number" data-item="1000">78%</p>
-                </div>
-            </li>
-        </a>
-    </ul>
+    <div id="root"></div>
 </main>
 {{> include/footer}}
+<script type="text/javascript" src="/dist/projectList-bundle.js"></script>
+<!--<script type="text/babel">-->
+    <!--var CommentBox = React.createClass({-->
+        <!--render: function() {-->
+          <!--return (-->
+            <!--<div className="commentBox">-->
+                <!--Hello world!-->
+            <!--</div>-->
+          <!--);-->
+        <!--}-->
+    <!--});-->
+    <!--ReactDOM.render(-->
+      <!--<CommentBox/>,-->
+            <!--document.getElementById('content')-->
+    <!--);-->
+<!--</script>-->
+<!--<script type="text/javascript" src="/js/projectList.js"></script>-->
 </body>
 </html>
