--- a/spring-boot/src/main/resources/templates/index.hbs
+++ b/spring-boot/src/main/resources/templates/index.hbs
@@ -66,7 +66,7 @@
                 <a href="/projects/{{this.id}}">
                     <li class="project">
                         <div class="project-img">
-                            <div class="status">시민참여</div>
+                            <div class="status" data-item="{{this.status}}">시민참여</div>
                         </div>
                         <div class="project-summary">
                             <h5>{{this.title}}</h5>
@@ -91,7 +91,7 @@
                 <a href="/projects/{{this.id}}">
                     <li class="project">
                         <div class="project-img">
-                            <div class="status">시민참여</div>
+                            <div class="status" data-item="{{this.status}}">시민참여</div>
                         </div>
                         <div class="project-summary">
                             <h5>{{this.title}}</h5>
