--- a/spring-boot/src/main/resources/templates/projectSearch.hbs
+++ b/spring-boot/src/main/resources/templates/projectSearch.hbs
@@ -11,7 +11,7 @@
 <main>
     <h2>Search</h2>
     <form action="#" class="main-search-zone">
-        <input placeholder="검색어를 입력해주세요">
+        <input class="input-search" placeholder="검색어를 입력해주세요">
         <label class="mdl-button mdl-js-button mdl-button--icon" for="input-search">
             <i class="material-icons">search</i>
         </label>
@@ -34,5 +34,6 @@
     </ul>
 </main>
 {{> include/footer}}
+<script type="text/javascript" src="/js/projectSearch.js"></script>
 </body>
 </html>
