--- a/spring-boot/src/main/resources/public/css/carousel.css
+++ b/spring-boot/src/main/resources/public/css/carousel.css
@@ -27,6 +27,10 @@
     -webkit-transition: all 800ms;
     max-width: 1100px;
     text-align: left;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 .carousel-page.page-1 {
@@ -61,6 +65,10 @@
     font-size: 20px;
     position: relative;
     top: 70%;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 .carousel-index-list {
