--- a/spring-boot/src/main/resources/public/css/login.css
+++ b/spring-boot/src/main/resources/public/css/login.css
@@ -25,6 +25,10 @@ li.social-login a {
     text-decoration: none;
     color: #000000;
     font-weight: bold;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 li.social-login.facebook a {
@@ -80,6 +84,10 @@ form.login-form .submit-btn {
     background-color: #fd515d;
     margin: 28px 0 42px 0;
     font-weight: bold;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 div.others-zone {
