--- a/spring-boot/src/main/resources/public/css/mainProjects.css
+++ b/spring-boot/src/main/resources/public/css/mainProjects.css
@@ -50,6 +50,10 @@ li.project {
     margin: 0 7px 30px 7px;
     max-width: 320px;
     vertical-align: middle;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 li.project.long {
@@ -69,6 +73,14 @@ li.project.long {
     padding: 10px 20px;
     font-size: 20px;
     font-weight: bold;
+}
+
+.status.fail {
+    background-color: #b2b2b2;
+}
+
+.status.running {
+    background-color: #18c3b3;
 }
 
 .project .project-summary {
