--- a/spring-boot/src/main/resources/public/css/projectForm.css
+++ b/spring-boot/src/main/resources/public/css/projectForm.css
@@ -69,12 +69,14 @@ div.input-zone {
     width: 120px;
     display: block;
     margin: 50px auto;
-    border: solid #FFFFFF;
     border-radius: 1em;
     background-color: #18c3b3;
     color: #FFFFFF;
     font-size: 20px;
-    box-shadow: none;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 #page-2 p.writer-notice {
@@ -101,6 +103,10 @@ div.input-zone {
     color: #999999;
     padding: 3px 0 0 0;
     margin: 0 5px;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 .category-list li.is-checked {
