--- a/spring-boot/src/main/resources/public/css/projectSearch.css
+++ b/spring-boot/src/main/resources/public/css/projectSearch.css
@@ -71,6 +71,10 @@ li.project {
     margin: 0 0 30px 0;
     max-width: 380px;
     vertical-align: middle;
+    box-shadow:
+            0 2px 2px 0 rgba(0,0,0,.14),
+            0 3px 1px -2px rgba(0,0,0,.2),
+            0 1px 5px 0 rgba(0,0,0,.12);
 }
 
 li.project.long {
