login and create project

--- a/spring-boot/src/main/resources/public/css/layout.css
+++ b/spring-boot/src/main/resources/public/css/layout.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: NotoSans;
-    src: url("/font/NotoSans.otf") format("opentype");
+    src: url("/fonts/NotoSans.otf") format("opentype");
 }
 
 html, body {
