--- a/spring-boot/src/main/resources/public/css/login.css
+++ b/spring-boot/src/main/resources/public/css/login.css
@@ -65,6 +65,33 @@ form.login-form input {
     text-align: center;
     font-size: 20px;
     margin: 0 0 14px 0;
+    border: solid #b2b2b2 1px;
+}
+
+input.blink {
+    -webkit-animation: blink 1s linear;
+}
+
+@-webkit-keyframes blink {
+    0% {
+        border: solid #fd515d 1px;
+    }
+
+    25% {
+        border: solid #b2b2b2 1px;
+    }
+
+    50% {
+        border: solid #fd515d 1px;
+    }
+
+    75% {
+        border: solid #b2b2b2 1px;
+    }
+
+    100% {
+        border: solid #fd515d 1px;
+    }
 }
 
 form.login-form input::placeholder {
