find password feature

--- a/spring-boot/src/main/resources/public/css/editPassword.css
+++ b/spring-boot/src/main/resources/public/css/editPassword.css
@@ -5,13 +5,13 @@ h1, h2 {
     font-weight: bold;
 }
 
-div.find-password-zone {
+div.edit-password-zone {
     width: 80%;
     margin: auto;
     text-align: center;
 }
 
-.find-password-zone label {
+.edit-password-zone label {
     position: absolute;
     z-index: 10;
     font-size: 11pt;
@@ -20,15 +20,19 @@ div.find-password-zone {
     text-align: left;
 }
 
-.find-password-zone label.label-password-confirm {
+.edit-password-zone label.label-password-confirm {
     margin: 8px 0 0 20px;
 }
 
-.label-email {
+.label-password {
     color: #5d9eee;
 }
 
-.email-form input {
+.label-password.confirm {
+    color: #18c3b3;
+}
+
+.password-form input {
     width: 65%;
     font-size: 10pt;
     height: 50px;
@@ -36,17 +40,17 @@ div.find-password-zone {
     text-align: center;
 }
 
-.email-form input::placeholder {
+.password-form input::placeholder {
     text-align: center;
     color: #b2b2b2;
 }
 
-form.email-form p {
+form.password-form p {
     margin: 2px 0 0 0;
     font-size: 0.9em;
 }
 
-form.email-form .submit-btn {
+form.password-form .submit-btn {
     width: 250px;
     height: 50px;
     display: block;
