--- a/spring-boot/src/main/resources/templates/findPassword.hbs
+++ b/spring-boot/src/main/resources/templates/findPassword.hbs
@@ -18,6 +18,11 @@
             <input class="submit-btn" type="submit" value="변경메일 보내기">
         </form>
     </div>
+    <div id="demo-snackbar-example" class="mdl-js-snackbar mdl-snackbar">
+        <div class="mdl-snackbar__text"></div>
+        <button class="mdl-snackbar__action" type="button"></button>
+    </div>
     {{> include/footer}}
+    <script type="text/javascript" src="/js/findPassword.js"></script>
 </body>
 </html>
