--- a/spring-boot/src/main/resources/templates/projectForm.hbs
+++ b/spring-boot/src/main/resources/templates/projectForm.hbs
@@ -184,7 +184,7 @@
     </div>
 </main>
 <!--<script src="https://cdn.quilljs.com/1.0.0/quill.js"></script>-->
-<script src="//cdn.ckeditor.com/4.10.0/basic/ckeditor.js"></script>
+<script src="https://cdn.ckeditor.com/4.10.0/standard-all/ckeditor.js"></script>
 <script type="text/javascript" src="/js/projectForm.js"></script>
 {{> include/footer}}
 </body>
