--- a/spring-boot/src/main/resources/public/css/project.css
+++ b/spring-boot/src/main/resources/public/css/project.css
@@ -347,6 +347,11 @@ p.date {
     color: #18c3b3;
 }
 
+h4 {
+    font-weight: bold;
+    margin: 60px 0 10px 0;
+}
+
 p.contents {
     margin: 5px 0 0 20px;
     padding: 18px 24px;
