--- a/spring-boot/src/main/resources/templates/projectForm.hbs
+++ b/spring-boot/src/main/resources/templates/projectForm.hbs
@@ -107,11 +107,19 @@
 
     <div class="categories page" id="page-5">
         <table>
+            <tr>
+                <td>
+                    <div class="input-zone">
+                        <label for= "desc">제안에 대한 간단한 요약</label>
+                        <textarea class="desc" id="desc" cols="40" placeholder="내용을 입력해주세요"></textarea>
+                    </div>
+                </td>
+            </tr>
             <tr class="contents">
                 <td>
                     <h5>제안과 관련된 분야를 선택해주세요.<br>
                     제안과 관련된 상임위를 고려해 관리자에 의해 분야가 조정될 수 있습니다.</h5>
-                    <br><br><br>
+                    <br>
                     <label for="category">분야</label>
                     <ul class="category-list" id="category">
                         <li>노동</li>
