agreement & privacy page

--- a/spring-boot/src/main/resources/templates/project.hbs
+++ b/spring-boot/src/main/resources/templates/project.hbs
@@ -217,7 +217,11 @@
                     </table>
                 </li>
             </ul>
-        </div>
+            <div id="write-comment-zone">
+                <textarea class="input-comment" rows="5" placeholder="댓글을 입력해주세요"></textarea>
+                <button class="submit-comment-btn">입력</button>
+            </div>
+        </div><!--discussion-->
     </div>
 </main>
 {{> include/footer}}
