--- a/spring-boot/src/main/resources/public/css/project.css
+++ b/spring-boot/src/main/resources/public/css/project.css
@@ -130,7 +130,10 @@ li.status.active {
     height: 30px;
     display: inline-block;
     border-radius: 3em;
-    background-color: #5d9eee;
+    background-image: url("/img/profile.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 
 h5.writer {
@@ -438,9 +441,29 @@ button.likes {
     background-position: 3px 3px;
 }
 
-
 .discussion-info {
     display: inline-block;
+}
+
+#write-comment-zone {
+    text-align: center;
+}
+
+#write-comment-zone .input-comment{
+    width: 70%;
+    background-color: #efefef;
+    border: none;
+}
+
+#write-comment-zone button.submit-comment-btn {
+    vertical-align: top;
+    margin: 5px;
+    width: 10%;
+    min-width: 55px;
+    height: 60px;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 10px;
 }
 
 @media screen and (min-width: 900px) {
