--- a/spring-boot/src/main/resources/templates/include/footer.hbs
+++ b/spring-boot/src/main/resources/templates/include/footer.hbs
@@ -1,7 +1,7 @@
 <footer class="official-account">
     <div class="left-side">
-        <p class="private-info">개인정보취급방침</p>
-        <p class="terms-of-use">이용약관</p>
+        <a href="/privacy"><p class="private-info">개인정보취급방침</p></a>
+        <a href="/userAgreement"><p class="terms-of-use">이용약관</p></a>
     </div>
     <div class="right-side">
         <p>info@toktok.io</p>
